Bug 433210 - Konsole doesn't show the default profile in the list of profiles
Summary: Konsole doesn't show the default profile in the list of profiles
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 380518 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-19 00:08 UTC by Dan Dascalescu
Modified: 2021-03-07 20:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments
Screencast (1.88 MB, video/webm)
2021-02-19 00:08 UTC, Dan Dascalescu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Dascalescu 2021-02-19 00:08:55 UTC
Created attachment 135875 [details]
Screencast

SUMMARY
The "default" profile seems to receive special treatment in console, and is hidden from the list in Settings -> Manage Profiles.

STEPS TO REPRODUCE (from memory, might not be exact)
1. On a fresh Konsole install, Settings -> Edit Current Profile
2. Change the font size
3. Attempt to save. There will be an error that the profile must have a name.
4. Name the profile "Local".
5. Go to Settings -> Manage Profiles.

OBSERVED RESULT
Only the "Local" profile shows up, but in Settings -> Switch Profile, both Default and Local show up.

EXPECTED RESULT
The Default profile should be included in the Manage Profiles list.
Comment 1 Kurt Hindenburg 2021-02-20 01:33:26 UTC
At one time, this was by design since if you change any setting, you have to save a new profile.

The default is something you can't change and can always go back to.
Comment 2 Ahmad Samir 2021-02-20 21:43:30 UTC
It is indeed confusing when the "Default" profile isn't listed; I am thinking of showing it in the dialog and disabling the Edit button for it, i.e. you can "set as default" or create a "New" profile based on the Default one but not "edit" it, I'll how that goes and create a merge request.
Comment 3 Bug Janitor Service 2021-02-21 16:56:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/351
Comment 4 Ahmad Samir 2021-02-22 10:02:54 UTC
*** Bug 380518 has been marked as a duplicate of this bug. ***
Comment 5 lylewang.au 2021-02-26 02:10:26 UTC
In early versions there used to be a checkbox in the profile list to control whether to show the profile (as an option) in the "New Tab" and "Switch Profile" (as the form of sub-menu) etc., seems they're gone in latest versions ? It's a bit annoying now every time I do "File - New Tab" from the menu, I have to go into sub-menu and pick my default profile (before I made only mine visible so there was no sub-menu in this), possible to bring that checkbox back ? Cheers
Comment 6 Kurt Hindenburg 2021-03-07 20:44:18 UTC
Git commit 88c58a853d150a62d6751e630c946c45ad86db92 by Kurt Hindenburg, on behalf of Ahmad Samir.
Committed on 07/03/2021 at 20:43.
Pushed by hindenburg into branch 'master'.

Show the Default/fallback profile in the profile manager dialog

Let the Default/fallback profile be shown in the Profile Manager dialog,
and disable the Edit and Delete buttons for it, it can be "cloned" by
using the New button.
FIXED-IN: 21.04

M  +0    -5    src/profile/ProfileManager.cpp

https://invent.kde.org/utilities/konsole/commit/88c58a853d150a62d6751e630c946c45ad86db92