Show the Default/fallback profile in the profile manager dialog

Let the Default/fallback profile be shown in the Profile Manager dialog,
and disable the Edit and Delete buttons for it, it can be "cloned" by
using the New button.

BUG: 433210
FIXED-IN: 21.04