src/profile/ProfileManager.cpp
@@ -244,11 +244,6 @@ void ProfileManager::sortProfiles(QList<Profile::Ptr>& list)
     QList<Profile::Ptr> havingIndices;
 
     for (const auto & i : list) {
-        // dis-regard the fallback profile
-        if (i->path() == _fallbackProfile->path()) {
-            continue;
-        }
-
         if (i->menuIndexAsInt() == 0) {
             lackingIndices.append(i);
         } else {
